--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1373,6 +1373,7 @@ hr {
     
     #intro-title{
         padding-top: 10px;
+      margin-left:5px;
         margin-top: 0;
         margin-bottom: 0;
     }
@@ -1398,7 +1399,7 @@ hr {
    height: 120px;
    position: relative;
    bottom: 260px;
-  
+  left:120px;
    margin: auto;
     z-index: 1;
     
@@ -1460,7 +1461,7 @@ hr {
 
 .mobile-opt{
     width: 80%;
-    margin-left: 55px;
+    margin-left: 45px;
     margin-bottom: 0;
     margin-top: 0;
     padding: 5px;
@@ -1474,8 +1475,8 @@ hr {
 }
 .nav-button{
     padding: 0.6em 1.15em;
-    padding-right: 60px;
-    padding-left: 60px;
+    padding-right: 50px;
+    padding-left: 50px;
     color: #fff;
     border: none;
     background-color: transparent;
