--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1438,7 +1438,7 @@ hr {
     font-size: 0.9rem;
     border: none;
     margin-top: 7px;
-   
+    margin-left: 6px;
   }
 .info{
     display: none;
