--- a/CSS/style.css
+++ b/CSS/style.css
@@ -610,7 +610,9 @@ body {
   /* color: thistle; */
   filter: invert(0.8);
 }
-
+.avatar{
+    border-radius: 100%;
+}
 .moon:hover {
   transform: rotate(-45deg);
   filter: invert(0.8);
